--- a/HTML/exer2/precios.html
+++ b/HTML/exer2/precios.html
@@ -2,57 +2,56 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>Invie - Tus mejores guitarras!!</title> 
+    <title>precios de tus mejores guitarras!!</title> 
     
     <link href="https://fonts.googleapis.com/css?family=Allerta|Roboto" rel="stylesheet">
 
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <header id="header" class="header contenedor"> <!-- header -->
+	<header id="header" class="header contenedor"> <!-- header -->
         <figure class="logotipo"> <!-- logotipo -->
             <img src="images/invie.png" with="186" height="60" alt="Logo Invie">
         </figure>
         <nav class="menu"> <!-- menu -->
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#guitarras">Guitarras</a></li>
+                <li><a href="index.html#guitarras">Guitarras</a></li>
                 <li><a href="precios.html">Precios</a></li>
             </ul>
         </nav>
     </header>
-    <section id="portada" class="portada"> <!-- portada -->
-        <div class="contenedor">
-            <h1 class="titulo">Guitarras Invisibles</h1>
-            <h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3>
-            <button class="button">Conoce más</button>
-        </div>
-    </section>
-    <section id="guitarras" class="guitarras contenedor">
-        <h2>Nuestras Guitarras</h2>
-        <article class="guitarra">
-            <img class="right" src="images/invie-acustica.png" alt="Guitarra Invie acústica" width="350">
-            <div class="contenedor-guitarra-a">
-                <h3 class="title-b">Invie Acústica</h3>
-                <ol>
-                    <li>Estilos Vintage</li>
-                    <li>Madera pura</li>
-                    <li>Estuche invisible de aluminio</li>
-                </ol>
-            </div>
-        </article>
-        <article class="guitarra">
-            <img class="left" src="images/invie-classic.png" alt="Guitarra invie classic" width="350">
-            <div class="contenedor-guitarra-b">
-                <h3 class="title-b">Invie Classic</h3>
-                <ol>
-                    <li>Estilos Vintage</li>
-                    <li>Liviana</li>
-                    <li>Inicia tu camino como profesional</li>
-                </ol>
-            </div>
-        </article>
-    </section>
+	<section class="tabla">
+		<div class="contenedor">
+			<table>
+				<thead>
+					<tr>
+						<th>Modelo</th>
+						<th>Precio</th>
+						<th>Descripción</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Invie Classic</td>
+						<td>$100000</td>
+						<td>Una guitarra muy pro</td>
+					</tr>
+					<tr>
+						<td>Invie Classic</td>
+						<td>$100000</td>
+						<td>Una guitarra muy pro</td>
+					</tr>
+					<tr>
+						<td>Invie Classic</td>
+						<td>$100000</td>
+						<td>Una guitarra muy pro</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</section>
+
     <footer class="footer">
         <div class="contenedor">
             <div class="contacto">
@@ -97,5 +96,6 @@
             </form>
         </div>
     </footer>
+
+
 </body>
-</html>
