--- a/HTML/exer2/index.html
+++ b/HTML/exer2/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <section id="portada" class="portada background"> <!-- portada -->
     <header id="header" class="header contenedor"> <!-- header -->
         <figure class="logotipo"> <!-- logotipo -->
             <img src="images/invie.png" with="186" height="60" alt="Logo Invie">
@@ -21,11 +22,10 @@
             </ul>
         </nav>
     </header>
-    <section id="portada" class="portada"> <!-- portada -->
         <div class="contenedor">
-            <h1 class="titulo">Guitarras Invisibles</h1>
+            <h1 class="titulo">Guitarras <span>Invi</span>sibles</h1>
             <h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3>
-            <button class="button">Conoce más</button>
+            <a class="button">Conoce más</a>
         </div>
     </section>
     <section id="guitarras" class="guitarras contenedor">
@@ -41,7 +41,7 @@
                 </ol>
             </div>
         </article>
-        <article class="guitarra">
+        <article class="guitarra b">
             <img class="left" src="images/invie-classic.png" alt="Guitarra invie classic" width="350">
             <div class="contenedor-guitarra-b">
                 <h3 class="title-b">Invie Classic</h3>
