--- a/HTML/exer2/precios.html
+++ b/HTML/exer2/precios.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-	<header id="header" class="header contenedor"> <!-- header -->
+	<header id="header" class="header background"> <!-- header -->
+        <div class="contenedor">
         <figure class="logotipo"> <!-- logotipo -->
             <img src="images/invie.png" with="186" height="60" alt="Logo Invie">
         </figure>
@@ -20,6 +21,7 @@
                 <li><a href="precios.html">Precios</a></li>
             </ul>
         </nav>
+        </div>
     </header>
 	<section class="tabla">
 		<div class="contenedor">
