--- a/JS/exercise2/index.html
+++ b/JS/exercise2/index.html
@@ -5,7 +5,7 @@
   <title>Documento prueba js</title>
 </head>
 <body>
-  <script src="capitalizeWords.js"></script>
+  <script src="this.js"></script>
 
 </body>
 </html>
