--- a/JS/exercise2/index.html
+++ b/JS/exercise2/index.html
@@ -5,7 +5,8 @@
   <title>Documento prueba js</title>
 </head>
 <body>
-  <script src="this.js"></script>
+  <button id="boton">Off</button>
+  <script src="inmutabilidad.js"></script>
 
 </body>
 </html>
