--- a/JS/exercise3/fundamentos/index.html
+++ b/JS/exercise3/fundamentos/index.html
@@ -9,9 +9,8 @@
 <body>
 
   <h1>Mi primera página en VSC</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla aspernatur repellat aliquam in exercitationem nihil adipisci quasi reiciendis eius mollitia!</p>
-
-  <a href="#">Hola Mundo</a><a href="#">Hola Mundo</a>
+  <div id="app"></div>
   
+  <script src="js/script.js"></script>
 </body>
 </html>
