--- a/JS/ejercicios-basicos-js/index.html
+++ b/JS/ejercicios-basicos-js/index.html
@@ -3,13 +3,13 @@
 <head>  
     <meta charset="utf-8"/>
     <title>Home</title>
-    <meta name="description" coment="Esto es el texto que aparece en la descripcion de busqueda de google"/>
+    <meta name="description" content="Esto es el texto que aparece en la descripcion de busqueda de google"/>
     <style>
         
     </style>
 </head>
 <body>
-
+    
     <script src="prueba.js"></script>
 </body>
 </html>
